# agentic-rag

./: .gitignore  README.md  pyproject.toml
agentic_rag/: ingestion.py  main.py
agentic_rag/graph/: consts.py  graph.py  state.py
agentic_rag/graph/chains/: __init__.py  answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
agentic_rag/graph/nodes/: __init__.py  generate.py  grade.py  retrieve.py  web_search.py
tests/: conftest.py  test_chains.py
